--- a/SFJob/SFJob/SFJob.csproj
+++ b/SFJob/SFJob/SFJob.csproj
@@ -114,6 +114,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Job.cs" />
+    <Compile Include="Viaje.cs" />
+    <Compile Include="LogWS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\JobService.cs" />
